test/ConstExtraction/ExtractConstantsFromMembersAttributeExperimental.code
// RUN: %target-typecheck-verify-language %s

// expected-error@+1{{'@extractConstantsFromMembers' requires '-enable-experimental-feature ExtractConstantsFromMembers'}}
@extractConstantsFromMembers protocol MyProto {}
